# rag_lab

./: .flaskenv  .gitignore  .quartenv  README.md  app.py  app_3.py  app_TMP.py  generator.py  pyproject.toml  qdrant_store.py  requirements.txt  routes.py
examples/: README.md
examples/app_1/: app.py
examples/app_2/: app.py
examples/app_3/: app.py
examples/app_4/: app.py
examples/health_care/: app.py
services/: chat_service.py  document_service.py  prompt_service.py  record_service.py
src/: __init__.py  app.py  document_store.py  generator.py  pipeline.py  qdrant_store.py  routes.py
src/components/: CustomXLSXToDocuments.py  WebOfScienceFetcher.py
src/haystack/: app.py  generator.py  qdrant_store.py  routes.py
src/haystack/services/: document_service.py  pdf_service.py
src/haystack/services/helper/: helper_functions.py
src/models/: Record.py
src/routes/: routes.py
src/services/: chat_service.py  document_service.py  prompt_service.py  record_service.py
